<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <LinearLayout
        android:id="@+id/loadingmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <smo.zooket.Util.SizeAdjustingTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            fontPath="fonts/BYekan.ttf"
            android:layout_marginRight="5dp"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/loading"
            android:textColor="@color/ColorPrimary"
            android:textSize="16dp" />

        <com.pnikosis.materialishprogress.ProgressWheel xmlns:wheel="http://schemas.android.com/apk/res-auto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            wheel:matProg_barColor="@color/ColorPrimary"
            wheel:matProg_progressIndeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <smo.zooket.Util.SizeAdjustingTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                fontPath="fonts/BYekan.ttf"
                android:gravity="center"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/retrywithparantes"
                android:textColor="@color/ColorPrimary"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/smo_refresh" />

            <smo.zooket.Util.SizeAdjustingTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                fontPath="fonts/BYekan.ttf"
                android:gravity="center"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/failedtoloadwithparantes"
                android:textColor="@color/ColorPrimary"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <smo.zooket.Util.SizeAdjustingTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                fontPath="fonts/BYekan.ttf"
                android:gravity="center"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/finishmessage"
                android:textColor="@color/ColorPrimary"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>