<?xml version="1.0" encoding="utf-8"?>
<smo.zooket.Adapter.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pulltorefresh_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/contentHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <in.srain.cube.views.GridViewWithHeaderAndFooter
                        android:id="@+id/itemgrid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:horizontalSpacing="5dp"
                        android:numColumns="1"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="5dp"></in.srain.cube.views.GridViewWithHeaderAndFooter>


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/NothingFound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <smo.zooket.Util.SizeAdjustingTextView
                        fontPath="fonts/BYekan.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@string/nothingfound"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loadingHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            android:id="@+id/loadingmore"
                            layout="@layout/loading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"></include>

                    </LinearLayout>


                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/NoInternet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <smo.zooket.Util.SizeAdjustingTextView
                            fontPath="fonts/BYekan.ttf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:lines="1"
                            android:singleLine="true"
                            android:text="@string/failedtoload"
                            android:textSize="16dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <smo.zooket.Util.SizeAdjustingTextView
                                fontPath="fonts/BYekan.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:lines="1"
                                android:singleLine="true"
                                android:text="@string/retry"
                                android:textSize="16dp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/smo_refresh" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GPSHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <smo.zooket.Util.SizeAdjustingTextView
                        fontPath="fonts/BYekan.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@string/nolocationservice"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/ActivateLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingTop="12dp">

                            <smo.zooket.Util.SizeAdjustingTextView
                                fontPath="fonts/BYekan.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:text="@string/activegps"
                                android:textSize="14dp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/smo_location" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/RefreshLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingTop="12dp">

                            <smo.zooket.Util.SizeAdjustingTextView
                                fontPath="fonts/BYekan.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:text="@string/retry"
                                android:textSize="14dp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/smo_refresh" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/layoutfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="10dp"
            android:src="@drawable/ic_backwhite"
            android:visibility="gone"
            fab:fab_colorNormal="#ff3779da"
            fab:fab_colorPressed="#ff3666c7"
            fab:fab_colorRipple="#99FFFFFF" />

    </FrameLayout>

</smo.zooket.Adapter.SwipeLayout>